# voyageai

./: .cursorignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  LICENSE.md  README.md  ZED_CONVENTIONS.md  voyageai.code-workspace
docs/: book.toml
docs/src/: ARCHITECTURE.md  AUTHENTICATION.md  EMBEDDINGS.md  README.md  RERANK.md  SUMMARY.md  VECTOR_SIMILARTIY.MD
examples/: Cargo.toml  advanced_usage.rs  comprehensive_example.rs  mod.rs
examples/modules/: advanced_usage.rs  basic_client.rs  comprehensive_example.rs  contextual_rag.rs  embeddings_example.rs  rerank_example.rs  rerank_with_scores.rs
src/: errors.rs  lib.rs  main.rs
src/builder/: embeddings.rs  mod.rs  rerank.rs  search.rs  voyage.rs
src/client/: client_limiter.rs  embeddings_client.rs  mod.rs  rerank_client.rs  retry.rs  search_client.rs  voyage_client.rs
src/config/: config.rs  errors.rs  mod.rs  voyage_config.rs
src/examples/: basic_client.rs  contextual_rag.rs  embeddings_example.rs  rerank_example.rs  rerank_with_scores.rs
src/models/: builder.rs  embeddings.rs  mod.rs  model_type.rs  rerank.rs  search.rs  usage.rs
src/traits/: llm.rs  mod.rs  voyage.rs
tests/: integration_test.rs  mock_api_tests.rs  test_client.rs  test_embed.rs  test_embeddings_similarity.rs  test_model_type.rs  test_rerank.rs  test_search_client.rs
