[package]
name = "voyageai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
clap = "3.0"

[dev-dependencies]
mockito = "1.0"
approx = "0.5"
lazy_static = "1.4"
