[workspace]

[package]
name = "voyageai"
description = "Voyage AI command line interface and SDK"
version = "0.1.0"
authors = ["David Maple <david@parallm.dev"]
license = "MIT"
repository = "https://github.com/parallm/voyageai-rust"
homepage = "https://docs.voyageai.rust"
keywords = ["voyageai", "ai", "embeddings", "search", "cli"]
categories = ["command-line-utilities", "api-bindings"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.3"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
mockito = "1.6.1"
dotenvy = "0.15"
mockall = "0.13.0"
once_cell = "1.20"
tokio = { version = "1.41.1", features = ["full", "test-util"] }
approx = "0.5.1"
lazy_static = "1.5.0"
