[workspace]

[package]
name = "voyageai_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
voyageai = { path = "../" }
thiserror = "1.0.68"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
clap = "4.4.7"

[[bin]]
name = "example"
path = "mod.rs"

[[example]]
name = "basic_client"
path = "modules/basic_client.rs"

[[example]]
name = "contextual_rag"
path = "modules/contextual_rag.rs"

[[example]]
name = "embeddings_example"
path = "modules/embeddings_example.rs"

[[example]]
name = "rerank_example"
path = "modules/rerank_example.rs"

[[example]]
name = "rerank_with_scores"
path = "modules/rerank_with_scores.rs"
